<resources>
    <string name="app_name">NHDD Pocket</string>
    <string name="app_name_nhdd">NHDD</string>
    <string name="app_name_pocket">Pocket</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="nav_about">About</string>
    <string name="nav_setting">Setting</string>
    <string name="data_update">NHDD Pocket: Update</string>
    <string name="update_info">The app is updating the local database. This process may take a while, so please be patient.</string>
    <string name="nav_favorite">Favorite</string>
    <string name="search_hint">Type your search term</string>
    <string name="nav_communicate">Communicate</string>
    <string name="nav_share">Share</string>
    <string name="nav_feedback">Feedback</string>
    <string name="ethiopia_name">Federal Democratic Republic of Ethiopia</string>
    <string name="fmoh_name">Ministry of Health</string>
    <string name="powered_by">Powered by: Open Concept Lab (OCL)</string>
    <string name="version">Version 1.0 (May 2018)</string>
    <string name="about_app">The National Health Data Dictionary (NHDD) is a terminology management system developed using Open Concept Lab (OCL) and has been deployed since 2016. Currently, the National Classification of Diseases (NCoD) and revised HMIS indicators (of 2017) are defined and accessible via this mobile app and the web version.\n\nThis app is designed with the support of the Data Use Partnership (DUP) Project.</string>
    <string name="title_activity_feedback">Feedback</string>
    <string name="nav_help_support">Help &amp; Support</string>
    <string name="nav_update">Update data</string>
    <string name="data_not_found">Data could not be loaded at this time.</string>
    <string name="message_activity_feedback">We\'ll appreciate a word or two from you on the app.</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
</resources>
